# HybridAlgSolver

./: .gitignore  CMakeLists.txt  Completment.cpp  Completment_Main.cpp  DetectAmbiguity.cpp  GREWIA.cpp  IntersectionK.cpp  Match.cpp  PositionTest.cpp  Readme.md  main  main.cpp  test.txt
Datasets/: php_hunter_better.txt
Membership/: FULLMATCH.cpp  MatchFunctions.h
Output/: 1.txt  output.txt
Parser/: CMakeLists.txt  parser.cpp  parser.h  parserLargeUnicode.cpp
PerlMatch/: benchmark.pl
PythonMatch/: match.js  match.py
Solver/: CMakeLists.txt  solver.cpp  solver.h  solver_kind.h  solver_proof_rule.h  solver_types.h
Solver/DetectAmbiguity/: DetectAmbiguity.cpp
Solver/DetectAmbiguity_WithLookAround/: DetectAmbiguity.cpp  DetectAmbiguity.h
Solver/PositionAutomaton/: Completment.cpp  DFA.cpp  Intersectiontest.cpp  Intersectiontest.h  PositionAutomaton.cpp  PositionAutomaton.h
Solver/String/: regexp_symbolic.cpp  regexp_symbolic.h  regexp_symbolic_Completment.cpp  regexp_symbolic_follow.cpp  regexp_symbolic_inclusion.cpp  regexp_symbolic_intersection.cpp  regexp_symbolic_intersectionK.cpp
TCS_Benchmarks/: README.md
TCS_Benchmarks/redos_fix/: __init__.py  areformat.py  corpus1_output_distinct_1000_999_0_0.smt2  corpus1_output_distinct_1000_999_0_0.txt  corpus1_output_distinct_1000_999_16_0.smt2  corpus1_output_distinct_1000_999_16_0.txt  corpus1_output_distinct_1000_999_24_0.smt2  corpus1_output_distinct_1000_999_24_0.txt  corpus1_output_distinct_1000_999_32_0.smt2  (+12336 more)
Test/: Test.py  Verified.py  make_regexes.py  query.py
(+3348 files in other folders)
